refactor: java17에서 개선된 toList()로 문법 변경