@@ -9,7 +9,6 @@ import com.programmers.springweekly.dto.voucher.response.VoucherResponse;
 import com.programmers.springweekly.repository.voucher.VoucherRepository;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -47,7 +46,7 @@ public class VoucherService {
 
     public VoucherListResponse findAll() {
         List<Voucher> voucherList = voucherRepository.findAll();
-        return new VoucherListResponse(voucherList.stream().map(VoucherResponse::new).collect(Collectors.toList()));
+        return new VoucherListResponse(voucherList.stream().map(VoucherResponse::new).toList());
     }
 
     public void deleteById(UUID voucherId) {
